# src/main/java/com/deep/library/domains/dto/HistoryResponse.java
@@ -1,0 +1,7 @@
+package com.deep.library.domains.dto;
+
+public record HistoryResponse(
+        String takenBy,
+        String titleBook
+) {
+}
